--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Expensify 2 App React</title>
     <link rel="icon" type="image/png" href="/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="/styles.css" />
     <!-- <script src="main.js"></script> -->
 </head>
 <body>   
