--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <title>Expensify 2 App React</title>
     <link rel="icon" type="image/png" href="/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/styles.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/dist/styles.css" />
     <!-- <script src="main.js"></script> -->
 </head>
 <body>   
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
 </body>
 </html>
